# antispam

./: Cargo.toml  LICENSE  README.md  example.env  shell.nix
src/: application_state.rs  connections.rs  entities.rs  eventing.rs  flood_state.rs  handle_flood.rs  main.rs  members_ids.txt  processes.rs  setup_database.rs  state.rs  vk.rs
src/api/: vk.rs
src/api/vk/: delete_vk_content.rs  vk_api.rs
src/connections/: event.rs  listening.rs
src/entities/: connection.rs  group.rs  setting.rs  spamer.rs  spamer_group.rs
src/eventing/: reciveing.rs  server.rs
src/eventing/reciveing/: internal_network.rs  server.rs  vk.rs
src/eventing/reciveing/internal_network/: emitting.rs  listening.rs
src/eventing/reciveing/vk/: callback.rs  longpool.rs
src/eventing/reciveing/vk/callback/: callback_models.rs  create_router.rs  route_handler.rs
src/eventing/reciveing/vk/longpool/: longpool.rs  run_service.rs
src/processes/: functions.rs  wall_post_new.rs  wall_reply_new.rs
src/processes/functions/: check_and_push_msgs_state.rs  process_delete.rs
src/state/: application.rs
src/vk/: longpool.rs  models.rs  vk_response.rs
