[package]
name = "blazingly-fast-group-saver"
version = "0.1.0"
edition = "2024"

[dependencies]
arc = "0.0.1"
axum = { version = "0.8.8", features = ["macros"] }
chrono = { version = "0.4.42", features = ["serde"] }
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.29"
rand = "0.9.2"
reqwest = { version = "0.13.1", features = ["blocking", "json", "multipart", "blocking"] }
sea-orm = { version = "1.1.19", features = ["macros", "runtime-tokio-rustls", "sqlx-sqlite"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
